force-app/main/default/objects/Opportunity/fields/Auto_Renew_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Date__c</fullName>
    <description>Auto-Renew Date</description>
    <label>Auto-Renew Date</label>
    <type>Date</type>
</CustomField>