force-app/main/default/objects/Opportunity/fields/CWS_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will fetch the Account Team Member from related Account on Opp and give priority to Account Director over Account Manager over Associate Account Manager over Outbound Account Manager.</description>
    <inlineHelpText>Account Team Member (Account Director over Account Manager over Associate Account Manager over Outbound Account Manager)</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>