force-app/main/default/objects/Opportunity/fields/CWS_Account_Restriction_Approved__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account_Restriction_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked true if the account restriction approval is approved</description>
    <inlineHelpText>Indicates whether the Account associated to this Opportunity is restricted or delinquent, in which case the Opportunity may not be able to proceed.</inlineHelpText>
    <label>Account Restriction Approved</label>
    <type>Checkbox</type>
</CustomField>