force-app/main/default/objects/Opportunity/fields/CWS_Agnostic_Channel_Rep__c.field-meta.xml
<CustomField>
    <fullName>CWS_Agnostic_Channel_Rep__c</fullName>
    <description>This field is used to send an email to email address of non Salesforce user</description>
    <label>Agnostic Channel Rep</label>
    <type>Email</type>
</CustomField>