force-app/main/default/objects/Opportunity/fields/CWS_Approval_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>CWS_Approval_Guidelines__c</fullName>
    <inlineHelpText>Indicates approval guidelines for this Opportunity.</inlineHelpText>
    <label>Approval Guidelines</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>