force-app/main/default/objects/Opportunity/fields/CWS_Ask_For_The_Business__c.field-meta.xml
<CustomField>
    <fullName>CWS_Ask_For_The_Business__c</fullName>
    <inlineHelpText>Indicates whether the buyer agrees to the solution proof and timing to move forward during sales analysis.</inlineHelpText>
    <label>Ask for the business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>