force-app/main/default/objects/Opportunity/fields/CWS_Assigned_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>CWS_Assigned_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Nurturing_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>