force-app/main/default/objects/Opportunity/fields/CWS_Auto_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Auto_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this Opportunity was created via the Auto-Opportunity process for certain Distributors.</inlineHelpText>
    <label>Auto Opportunity</label>
    <type>Checkbox</type>
</CustomField>