force-app/main/default/objects/Opportunity/fields/CWS_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Captures the Bill To Account associated to this Opportunity.</inlineHelpText>
    <label>Bill To (Account)</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>$Source.CWS_Route_to_Market__c</field>
            <operation>equals</operation>
            <value>Channel</value>
        </filterItems>
        <filterItems>
            <field>Account.CWS_Is_Distributor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bill - To Account)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>