force-app/main/default/objects/Opportunity/fields/CWS_Bill_To_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bill_To_Account_Name__c</fullName>
    <description>Captures the Name of the Bill To Account associated to this Opportunity.</description>
    <formula>CWS_Bill_To_Account__r.Name</formula>
    <label>Bill To (Account) Name</label>
    <type>Text</type>
</CustomField>