force-app/main/default/objects/Opportunity/fields/CWS_Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Captures the Bill To Contact for the Opportunity; only the Primary and Primary Billing Contact on the Bill To Account will be selectable.</inlineHelpText>
    <label>Bill To (Contact)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.CWS_Bill_To_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>