force-app/main/default/objects/Opportunity/fields/CWS_Bill_To_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bill_To_Contact_Name__c</fullName>
    <description>Captures the Name of the Bill To Contact for the Opportunity; only the Primary and Primary Billing Contact on the Bill To Account will be selectable.</description>
    <formula>CWS_Bill_To_Contact__r.FirstName &amp; &quot; &quot; &amp; CWS_Bill_To_Contact__r.LastName</formula>
    <label>Bill To (Contact) Name</label>
    <type>Text</type>
</CustomField>