force-app/main/default/objects/Opportunity/fields/CWS_Budget_in_place__c.field-meta.xml
<CustomField>
    <fullName>CWS_Budget_in_place__c</fullName>
    <inlineHelpText>Indicates whether the prospect has a budget for this purchase.</inlineHelpText>
    <label>Budget in place?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Run Rate Sale</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>