force-app/main/default/objects/Opportunity/fields/CWS_Business_needs_pain_points__c.field-meta.xml
<CustomField>
    <fullName>CWS_Business_needs_pain_points__c</fullName>
    <inlineHelpText>Captures the prospect&apos;s business requirements or pain points during sales discovery.</inlineHelpText>
    <label>Business needs/pain points</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>