force-app/main/default/objects/Opportunity/fields/CWS_Champion2__c.field-meta.xml
<CustomField>
    <fullName>CWS_Champion2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the Champion? Have they introduced us to the Economic Buyer?</inlineHelpText>
    <label>Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Champion)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>