force-app/main/default/objects/Opportunity/fields/CWS_Champion_Position__c.field-meta.xml
<CustomField>
    <fullName>CWS_Champion_Position__c</fullName>
    <inlineHelpText>PROVEN ORCHESTRATOR OF ACCESS, ADVOCACY (+)
UNPROVEN COACH (-)</inlineHelpText>
    <label>Champion Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>