force-app/main/default/objects/Opportunity/fields/CWS_Channel_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Channel_Rep_Email__c</fullName>
    <inlineHelpText>Captures the Channel Rep&apos;s email.</inlineHelpText>
    <label>Channel Rep Email</label>
    <type>Email</type>
</CustomField>