force-app/main/default/objects/Opportunity/fields/CWS_Clawback__c.field-meta.xml
<CustomField>
    <fullName>CWS_Clawback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clawback</label>
    <type>Checkbox</type>
</CustomField>