force-app/main/default/objects/Opportunity/fields/CWS_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Company_Name__c</fullName>
    <inlineHelpText>Captures prospect&apos;s company name.</inlineHelpText>
    <label>Company Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>