force-app/main/default/objects/Opportunity/fields/CWS_Competitor_Takeaway_Control__c.field-meta.xml
<CustomField>
    <fullName>CWS_Competitor_Takeaway_Control__c</fullName>
    <inlineHelpText>Captures Control competitor from which CW is taking business for this deal.</inlineHelpText>
    <label>Competitor Takeaway: Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Competitor_Takeaway_Control</valueSetName>
    </valueSet>
</CustomField>