force-app/main/default/objects/Opportunity/fields/CWS_Competitor_Takeaway_Security__c.field-meta.xml
<CustomField>
    <fullName>CWS_Competitor_Takeaway_Security__c</fullName>
    <inlineHelpText>Captures Security competitor from which CW is taking business for this deal.</inlineHelpText>
    <label>Competitor Takeaway: Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Competitor_Takeaway_Security</valueSetName>
    </valueSet>
</CustomField>