force-app/main/default/objects/Opportunity/fields/CWS_Created_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>CWS_Created_By_Current_User__c</fullName>
    <formula>$User.Id = CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Current User</label>
    <type>Checkbox</type>
</CustomField>