force-app/main/default/objects/Opportunity/fields/CWS_CreatedByAM__c.field-meta.xml
<CustomField>
    <fullName>CWS_CreatedByAM__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field to capture whether the Opportunity was created by a AM or Not(Only for Amendment)</description>
    <label>CreatedByAM</label>
    <type>Checkbox</type>
</CustomField>