force-app/main/default/objects/Opportunity/fields/CWS_Currency_Conversion__c.field-meta.xml
<CustomField>
    <fullName>CWS_Currency_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if currency conversion was done for the Opportunity</description>
    <inlineHelpText>Indicates if currency conversion was done for the Opportunity</inlineHelpText>
    <label>Currency Conversion</label>
    <type>Checkbox</type>
</CustomField>