force-app/main/default/objects/Opportunity/fields/CWS_Current_CRM_application_to_be_used__c.field-meta.xml
<CustomField>
    <fullName>CWS_Current_CRM_application_to_be_used__c</fullName>
    <inlineHelpText>Captures the prospect&apos;s current CRM application expected to be used when implementing CW Sell.</inlineHelpText>
    <label>Current CRM application to be used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No CRM</fullName>
            </value>
            <value>
                <fullName>ConnectWise Manage</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Autotask</fullName>
            </value>
            <value>
                <fullName>Microsoft CRM</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>