force-app/main/default/objects/Opportunity/fields/CWS_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Current_Status__c</fullName>
    <inlineHelpText>Captures the latest update for this Opportunity.</inlineHelpText>
    <label>Current Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>