force-app/main/default/objects/Opportunity/fields/CWS_Current_tools_used__c.field-meta.xml
<CustomField>
    <fullName>CWS_Current_tools_used__c</fullName>
    <inlineHelpText>Captures which technology tools the prospect is currently using during sales Discovery.</inlineHelpText>
    <label>Current tools used</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>