force-app/main/default/objects/Opportunity/fields/CWS_Custom_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Custom_Forecast_Amount__c</fullName>
    <inlineHelpText>No longer needed.</inlineHelpText>
    <label>Custom Forecast Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>