force-app/main/default/objects/Opportunity/fields/CWS_Custom_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Custom_Forecast_Category__c</fullName>
    <inlineHelpText>No longer needed.</inlineHelpText>
    <label>Custom Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>