force-app/main/default/objects/Opportunity/fields/CWS_Custom_Probability__c.field-meta.xml
<CustomField>
    <fullName>CWS_Custom_Probability__c</fullName>
    <inlineHelpText>No longer needed.</inlineHelpText>
    <label>Custom Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline: 10%</fullName>
            </value>
            <value>
                <fullName>Pipeline: 15%</fullName>
            </value>
            <value>
                <fullName>Pipeline: 30%</fullName>
            </value>
            <value>
                <fullName>Best Case: 60%</fullName>
            </value>
            <value>
                <fullName>Commit: 90%</fullName>
            </value>
            <value>
                <fullName>Closed: 100%</fullName>
            </value>
            <value>
                <fullName>Omitted: 0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>