force-app/main/default/objects/Opportunity/fields/CWS_CW_Incremental_ACV__c.field-meta.xml
<CustomField>
    <fullName>CWS_CW_Incremental_ACV__c</fullName>
    <label>CW – Incremental ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>