force-app/main/default/objects/Opportunity/fields/CWS_DAM_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_DAM_Email__c</fullName>
    <inlineHelpText>Captures Distibutor Account Manager&apos;s email.</inlineHelpText>
    <label>DAM Email</label>
    <type>Email</type>
</CustomField>