force-app/main/default/objects/Opportunity/fields/CWS_Deal_Breakers__c.field-meta.xml
<CustomField>
    <fullName>CWS_Deal_Breakers__c</fullName>
    <inlineHelpText>Captures detail on any deal breakers after the demo; please enter &quot;N/A&quot; if no deal breakers identified.</inlineHelpText>
    <label>What were the deal breakers?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>