force-app/main/default/objects/Opportunity/fields/CWS_Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>CWS_Decision_Criteria__c</fullName>
    <inlineHelpText>1. How is CW positioned against key business and technical criteria? 
 2. Do we have the technical support endorsement? 
 3. Have we achieved the technical win(s)?</inlineHelpText>
    <label>Decision Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>