force-app/main/default/objects/Opportunity/fields/CWS_Decision_Criteria_Position__c.field-meta.xml
<CustomField>
    <fullName>CWS_Decision_Criteria_Position__c</fullName>
    <inlineHelpText>DOCUMENTED, FAVORABLE (+)
NOT DOCUMENTED OR UNFAVORABLE (-)</inlineHelpText>
    <label>Decision Criteria Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>