force-app/main/default/objects/Opportunity/fields/CWS_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>CWS_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Captures the Contact who is the economic buyer for the solution.</inlineHelpText>
    <label>Who is the decision maker?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Who is the decision maker?)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>