force-app/main/default/objects/Opportunity/fields/CWS_Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>CWS_Decision_Process__c</fullName>
    <inlineHelpText>1. What specific steps does CW/Partner execute to evaluate, select, &amp; implement? 2. Booking process/systems, signing steps, approvals known?
3. Go live dates discussed and set?</inlineHelpText>
    <label>Decision Process</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>