force-app/main/default/objects/Opportunity/fields/CWS_Decision_Process_Position__c.field-meta.xml
<CustomField>
    <fullName>CWS_Decision_Process_Position__c</fullName>
    <inlineHelpText>DOCUMENTED, MUTUAL, WITH GO NO GO, WITH MOVEMENT (+)
NOT DOCUMENTED OR LACK OF MOVEMENT, ALIGNMENT AND ACCESS (-)</inlineHelpText>
    <label>Decision Process Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>