force-app/main/default/objects/Opportunity/fields/CWS_Define_Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>CWS_Define_Success_Criteria__c</fullName>
    <inlineHelpText>Captures the most important factors that play into the evaluation and ultimately guide the prospect to decision.</inlineHelpText>
    <label>Define success criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>