force-app/main/default/objects/Opportunity/fields/CWS_Define_The_Prospects_Challenges__c.field-meta.xml
<CustomField>
    <fullName>CWS_Define_The_Prospects_Challenges__c</fullName>
    <inlineHelpText>Captures whether the prospect&apos;s challenges are due to processes or current systems in place.</inlineHelpText>
    <label>Define the prospect&apos;s challenges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Run Rate Sale</fullName>
            </value>
            <value>
                <fullName>Processes</fullName>
            </value>
            <value>
                <fullName>Current Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>