force-app/main/default/objects/Opportunity/fields/CWS_Department__c.field-meta.xml
<CustomField>
    <fullName>CWS_Department__c</fullName>
    <inlineHelpText>Indicates the department to which this Opportunity belongs</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Sales - Land</fullName>
            </value>
            <value>
                <fullName>New Sales - Expand</fullName>
            </value>
            <value>
                <fullName>Partner Sales</fullName>
            </value>
            <value>
                <fullName>Invent</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>