force-app/main/default/objects/Opportunity/fields/CWS_Detail_the_Challenges__c.field-meta.xml
<CustomField>
    <fullName>CWS_Detail_the_Challenges__c</fullName>
    <inlineHelpText>Captures additional details on the prospect&apos;s challenges.</inlineHelpText>
    <label>Detail the Challenges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>