force-app/main/default/objects/Opportunity/fields/CWS_Disti_Deal_Phase__c.field-meta.xml
<CustomField>
    <fullName>CWS_Disti_Deal_Phase__c</fullName>
    <inlineHelpText>Indicates the phase of a 2-Tier deal, either Disti - End Customer or CW - Disti.</inlineHelpText>
    <label>Disti Deal Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disti-End Customer Pricing</fullName>
            </value>
            <value>
                <fullName>CW-Disti Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>