force-app/main/default/objects/Opportunity/fields/CWS_Distributor_Community_Group__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor_Community_Group__c</fullName>
    <inlineHelpText>Capture&apos;s the Distributor Community Group for the associated Distributor.</inlineHelpText>
    <label>Distributor Community Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trust X Alliance</fullName>
            </value>
            <value>
                <fullName>SMB Alliance</fullName>
            </value>
            <value>
                <fullName>Tech Select</fullName>
            </value>
            <value>
                <fullName>Varnex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>