force-app/main/default/objects/Opportunity/fields/CWS_Division__c.field-meta.xml
<CustomField>
    <fullName>CWS_Division__c</fullName>
    <inlineHelpText>Indicates the division to which this Opportunity belongs</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company: CW-AU</fullName>
            </value>
            <value>
                <fullName>Company: CW-CAD</fullName>
            </value>
            <value>
                <fullName>Company: CW-IN</fullName>
            </value>
            <value>
                <fullName>Company: CW-UK</fullName>
            </value>
            <value>
                <fullName>Company: CW-US</fullName>
            </value>
            <value>
                <fullName>Company: Dashboard - CW-CAD</fullName>
            </value>
            <value>
                <fullName>Company: Dashboard - CW-EURO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>